Fix some overflow issues

--- a/css/elements.css
+++ b/css/elements.css
@@ -2,7 +2,7 @@
 	font-family: courier, monospace;
     color: #fff;
     max-width: 750px;
-    height: 75vh;
+    height: 75%;
 	margin-left: 1vw;
 	margin-right: 1vw;
 	margin-top: 3vh;
