--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,9 @@ body {
 div.container {
 	max-width: 750px;
 	margin-left: auto;
-    margin-right: auto;
+	margin-right: auto;
+	height: 100vh;
+    overflow: auto;
 }
 
 a {
